update Chatistics Source

--- a/Chatistics/source/layout/activity_group.xml.html
+++ b/Chatistics/source/layout/activity_group.xml.html
@@ -4,13 +4,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <style type="text/css">
 .s0 { color: #e8bf6a;}
-.s1 { color: #bababa;}
-.s2 { color: #6a8759;}
-.s3 { color: #a9b7c6;}
-.ln { color: #606366; font-weight: normal; font-style: normal; }
+.s1 { color: #ffffff;}
+.s2 { color: #54b33e;}
+.s3 { color: #ebebeb;}
+.ln { color: #999999; font-weight: normal; font-style: normal; }
 </style>
 </head>
-<body bgcolor="#2b2b2b">
+<body bgcolor="#131314">
 <table CELLSPACING=0 CELLPADDING=5 COLS=1 WIDTH="100%" BGCOLOR="#606060" >
 <tr><td><center>
 <font face="Arial, Helvetica" color="#000000">
@@ -373,11 +373,11 @@ activity_group.xml</font>
 <a name="l355"><span class="ln">355  </span></a>
 <a name="l356"><span class="ln">356  </span></a>
 <a name="l357"><span class="ln">357  </span></a>    <span class="s0">&lt;ImageView</span>
-<a name="l358"><span class="ln">358  </span></a>        <span class="s1">android:layout_width</span><span class="s2">=&quot;40dp&quot;</span>
-<a name="l359"><span class="ln">359  </span></a>        <span class="s1">android:layout_height</span><span class="s2">=&quot;40dp&quot;</span>
+<a name="l358"><span class="ln">358  </span></a>        <span class="s1">android:layout_width</span><span class="s2">=&quot;27dp&quot;</span>
+<a name="l359"><span class="ln">359  </span></a>        <span class="s1">android:layout_height</span><span class="s2">=&quot;31dp&quot;</span>
 <a name="l360"><span class="ln">360  </span></a>        <span class="s1">android:layout_margin</span><span class="s2">=&quot;16dp&quot;</span>
-<a name="l361"><span class="ln">361  </span></a>        <span class="s1">android:src</span><span class="s2">=&quot;@drawable/share&quot;</span>
-<a name="l362"><span class="ln">362  </span></a>        <span class="s1">android:onClick</span><span class="s2">=&quot;shareGroup&quot;</span>
+<a name="l361"><span class="ln">361  </span></a>        <span class="s1">android:onClick</span><span class="s2">=&quot;shareGroup&quot;</span>
+<a name="l362"><span class="ln">362  </span></a>        <span class="s1">android:src</span><span class="s2">=&quot;@drawable/share&quot;</span>
 <a name="l363"><span class="ln">363  </span></a>        <span class="s1">app:layout_constraintEnd_toEndOf</span><span class="s2">=&quot;parent&quot;</span>
 <a name="l364"><span class="ln">364  </span></a>        <span class="s1">app:layout_constraintTop_toTopOf</span><span class="s2">=&quot;parent&quot; </span><span class="s0">/&gt;</span>
 <a name="l365"><span class="ln">365  </span></a><span class="s0">&lt;/androidx.constraintlayout.widget.ConstraintLayout&gt;</span></pre>
