--- a/Chatistics/source/layout/activity_main.xml.html
+++ b/Chatistics/source/layout/activity_main.xml.html
@@ -4,13 +4,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <style type="text/css">
 .s0 { color: #e8bf6a;}
-.s1 { color: #bababa;}
-.s2 { color: #6a8759;}
-.s3 { color: #a9b7c6;}
-.ln { color: #606366; font-weight: normal; font-style: normal; }
+.s1 { color: #ffffff;}
+.s2 { color: #54b33e;}
+.s3 { color: #ebebeb;}
+.ln { color: #999999; font-weight: normal; font-style: normal; }
 </style>
 </head>
-<body bgcolor="#2b2b2b">
+<body bgcolor="#131314">
 <table CELLSPACING=0 CELLPADDING=5 COLS=1 WIDTH="100%" BGCOLOR="#606060" >
 <tr><td><center>
 <font face="Arial, Helvetica" color="#000000">
