--- a/Chatistics/source/layout/layout_emoji.xml.html
+++ b/Chatistics/source/layout/layout_emoji.xml.html
@@ -4,13 +4,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <style type="text/css">
 .s0 { color: #e8bf6a;}
-.s1 { color: #bababa;}
-.s2 { color: #6a8759;}
-.s3 { color: #a9b7c6;}
-.ln { color: #606366; font-weight: normal; font-style: normal; }
+.s1 { color: #ffffff;}
+.s2 { color: #54b33e;}
+.s3 { color: #ebebeb;}
+.ln { color: #999999; font-weight: normal; font-style: normal; }
 </style>
 </head>
-<body bgcolor="#2b2b2b">
+<body bgcolor="#131314">
 <table CELLSPACING=0 CELLPADDING=5 COLS=1 WIDTH="100%" BGCOLOR="#606060" >
 <tr><td><center>
 <font face="Arial, Helvetica" color="#000000">
@@ -24,7 +24,7 @@ layout_emoji.xml</font>
 <a name="l6"><span class="ln">6    </span></a>    <span class="s0">&lt;androidx.constraintlayout.widget.ConstraintLayout</span>
 <a name="l7"><span class="ln">7    </span></a>        <span class="s1">android:id</span><span class="s2">=&quot;@+id/layout_additional&quot;</span>
 <a name="l8"><span class="ln">8    </span></a>        <span class="s1">android:layout_width</span><span class="s2">=&quot;match_parent&quot;</span>
-<a name="l9"><span class="ln">9    </span></a>        <span class="s1">android:layout_height</span><span class="s2">=&quot;match_parent&quot;</span>
+<a name="l9"><span class="ln">9    </span></a>        <span class="s1">android:layout_height</span><span class="s2">=&quot;wrap_content&quot;</span>
 <a name="l10"><span class="ln">10   </span></a>        <span class="s1">android:background</span><span class="s2">=&quot;@color/colorPrimary&quot;</span>
 <a name="l11"><span class="ln">11   </span></a>        <span class="s1">app:layout_constraintEnd_toEndOf</span><span class="s2">=&quot;parent&quot;</span>
 <a name="l12"><span class="ln">12   </span></a>        <span class="s1">app:layout_constraintStart_toStartOf</span><span class="s2">=&quot;parent&quot;</span>
